resources/tests/invalid_syntax/primary.ct
//`Expected an expression!
//1
fn main()->i64 {
  +=;
}